--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "cdk": "cdk"
   },
   "devDependencies": {
+    "@types/aws-lambda": "^8.10.140",
     "@types/jest": "^29.5.14",
     "@types/node": "22.7.9",
     "jest": "^29.7.0",
